--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "classnames": "^2.3.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "three-js": "^79.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
