--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^4.1.8",
     "@react-three/fiber": "^6.0.13",
     "classnames": "^2.3.1",
+    "drei": "1.5.6",
     "react": ">=17.0",
-    "react-dom": "^16.10.1",
+    "react-dom": ">=17.0",
     "react-scripts": "3.2.0",
     "three": "^0.127.0",
+    "three-gltf-loader": "^1.111.0",
     "three-js": "^79.0.0"
   },
   "scripts": {
